@@ -57,6 +57,7 @@ h2. Boolean enumeration constraints
 | conjunction | {quickrefTemplate: bool_enum.conjunction.must... } | bool composite |
 | disjunction | {quickrefTemplate: bool_enum.disjunction.must... } | bool composite |
 | tuple | {quickrefTemplate: bool_enum.must_be.in tuples } | no negation nor reification |
+| channel | {quickrefTemplate: bool_enum.must.channel int_var } | no negation nor reification |
 
 h2. Set constraints
 
